@@ -2,26 +2,35 @@ plugins {
     id 'unmacaque.spring-boot'
 }
 
+ext {
+    neo4jVersion = '4.3.6'
+    neo4jOgmVersion = '3.2.27'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     runtimeOnly 'org.springframework.data:spring-data-rest-hal-explorer'
-    runtimeOnly('org.neo4j:neo4j:4.2.7') {
+    runtimeOnly("org.neo4j:neo4j:${neo4jVersion}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.slf4j', module: 'slf4j-nop'
     }
-    runtimeOnly('org.neo4j:neo4j-ogm-embedded-driver:3.2.27') {
+    runtimeOnly("org.neo4j:neo4j-ogm-embedded-driver:${neo4jOgmVersion}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
-    runtimeOnly('org.neo4j:neo4j-ogm-http-driver:3.2.27') {
+    runtimeOnly("org.neo4j:neo4j-ogm-http-driver:${neo4jOgmVersion}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation('org.neo4j.test:neo4j-harness:4.2.7') {
+    testImplementation("org.neo4j.test:neo4j-harness:${neo4jVersion}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.slf4j', module: 'slf4j-nop'
     }
 }
 
 description = 'Spring Data Neo4j'
+
+test {
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED']
+}
